# zsync2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  README.md
.github/workflows/: main.yml
ci/: Dockerfile  Dockerfile.bionic-i386  Dockerfile.bionic-x86_64  Dockerfile.xenial-i386  Dockerfile.xenial-x86_64  build-appimages.sh  build-in-docker.sh  install-gtest.sh
cmake/: export.cmake  zsync2Config.cmake.in
include/: zsclient.h  zsglobal.h  zshash.h  zsmake.h  zsutil.h
lib/: CMakeLists.txt
lib/hashlib/: CMakeLists.txt
lib/hashlib/src/: crc32.cpp  digest.cpp  keccak.cpp  md5.cpp  sha1.cpp  sha256.cpp  sha3.cpp
lib/hashlib/tests/: tests.cpp
lib/librcksum/: CMakeLists.txt  md4.h  rcksum.h  state.c
lib/libzsync/: CMakeLists.txt  sha1.h  zmap.c  zsync.c  zsync.h
lib/zlib/: CMakeLists.txt
resources/: bootstrap-container.sh  build-appimages.sh  zsync2.desktop  zsync2.ignore  zsyncmake2.desktop  zsyncmake2.ignore
scripts/: optimize_ranges.py  plot.py  simulate_download.py
src/: CMakeLists.txt  config.h.in  format_string.h  legacy_http.c  legacy_http.h  legacy_progress.c  legacy_progress.h  legacy_url.c  legacy_url.h  main.cpp  make_main.cpp  zsclient.cpp  zsmake.cpp  zsutil.cpp  zsutil.h
tests/: CMakeLists.txt  test_zshash.cpp  test_zsutil.cpp
